@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                perlindex
-version:             1.604
+version:             1.605
 abstract:            ~
 license:             ~
 author:              ~
